k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nopwd
  labels:
    name: nopwd
    app.kubernetes.io/name: nopwd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
