k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nopwd-api
  namespace: nopwd
  labels:
    app.kubernetes.io/name: nopwd-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nopwd-api
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nopwd-web
  namespace: nopwd
  labels:
    app.kubernetes.io/name: nopwd-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nopwd-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
