k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nopwd
  namespace: nopwd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nopwd.dev
        - api.nopwd.dev
      secretName: nopwd-tls
  rules:
    - host: nopwd.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nopwd-web
                port:
                  number: 80
    - host: api.nopwd.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nopwd-api
                port:
                  number: 80
